# postgres-wasm-fdw

./: Cargo.toml
src/: lib.rs
supabase-wrappers-wit/: world.wit
wit/: world.wit
